last commit after issues on session storsge debugging